# rglob

./: README.md  documentation.md  example.sh  pyproject.toml
rglob/: __init__.py  cli.py  rstdin.py
